# majin-blob

./: .all-contributorsrc  .gitignore  0.bootstrap.js  1.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html  starknet_state_diffs.json
.github/workflows/: test.yml  wasm-webapp.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: blob.rs  lib.rs
crates/eip4844/: Cargo.toml
crates/eip4844/src/: lib.rs
crates/rest-api/: Cargo.toml
crates/rest-api/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  serde.rs  state_diffs.rs
crates/types/src/testutils/: blob_639404_output.txt  blob_640641_output.txt  blob_640644_output.txt  blob_640646_output.txt  blob_640647_output.txt
crates/wasm/: .gitignore  Cargo.toml  LICENSE_MIT
crates/wasm/.github/: dependabot.yml
crates/wasm/app/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
crates/wasm/src/: lib.rs
examples/blob/: mainnet.txt  sn_blob_goerli.txt  sn_blob_state_update_da_goerli.txt
examples/scripts/python/: blob_recovery.py
scripts/python/: blob_recovery.py
src/: blob.rs  eip4844_params.rs  lib.rs  main.rs  serde.rs
src/core/: mod.rs
src/serde/: mod.rs
