[package]
name = "majin-blob"
description = "A minimalistic Rust library for working with Starknet blobs."
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
num-bigint = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
