[package]
name = "majin-blob-core"
description = "A minimalistic Rust library for working with Starknet blobs."
repository = "https://github.com/AbdelStark/majin-blob"
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]

# Internal dependencies
majin-blob-types = { workspace = true }
majin-blob-eip-4844 = { workspace = true }

# 3rd party dependencies
lazy_static = { workspace = true, default-features = false }
num-bigint = { workspace = true, default-features = false, features = [
    "serde",
] }
num-traits = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
