[package]
name = "majin-blob-eip-4844"
description = "EIP-4844 parameters for Majin Blob."
repository = "https://github.com/AbdelStark/majin-blob"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
# 3rd party dependencies
lazy_static = { workspace = true, default-features = false }
num-bigint = { workspace = true, default-features = false, features = [
    "serde",
] }
num-traits = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
