[package]
name = "majin-blob-types"
description = "Types for Majin Blob"
repository = "https://github.com/AbdelStark/majin-blob"
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]

# Internal dependencies
majin-blob-eip-4844 = { workspace = true }

# 3rd party dependencies
num-bigint = { workspace = true, default-features = false, features = [
    "serde",
] }
num-traits = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
rstest = "0.19.0"
